--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -1,8 +1,7 @@
 @page "/project/{projectId:int}"
-@using Microsoft.IdentityModel.Tokens
-@using Todo.Api.Dtos.ProjectDtos
-@using Todo.Api.Dtos.TodoItemDtos
-@using Todo.Api.Dtos.TodoListDtos
+@using Todo.Core.Dtos.ProjectDtos
+@using Todo.Core.Dtos.TodoItemDtos
+@using Todo.Core.Dtos.TodoListDtos
 @rendermode InteractiveServer
 
 
