--- a/Todo.Web/Components/Pages/ProjectPage.razor
+++ b/Todo.Web/Components/Pages/ProjectPage.razor
@@ -2,42 +2,52 @@
 @using Todo.Core.Dtos.ProjectDtos
 @using Todo.Core.Dtos.TodoItemDtos
 @using Todo.Core.Dtos.TodoListDtos
+@using Todo.Web.Services.interfaces
+
+@inject IProjectService ProjectService
+@inject ITodoListService TodoListService
+@inject ITodoItemService TodoItemService
+
 @rendermode InteractiveServer
 
+@if (CurrentProject == null)
+{
+    <h1>No project found</h1>    
+}
+else
+{
+    <title>@CurrentProject.Name</title>
 
-<title>@CurrentProject.Name</title>
+    <h1>@CurrentProject.Name</h1>
 
-<h1>@CurrentProject.Name</h1>
-
-<div class="todo-lists-container">
-    @if (CurrentProject.TodoLists.Count != 0)
-    {
-        @foreach (var todoList in CurrentProject.TodoLists)
+    <div class="todo-lists-container">
+        @if (CurrentProject.TodoLists.Count != 0)
         {
-            <div class="todo-list-container">
+            @foreach (var todoList in CurrentProject.TodoLists)
+            {
+                <div class="todo-list-container">
 
-                <div class="todo-list-title">
-                    <h5>@todoList.Name</h5>
-                    <img src="images/menu.png"/>
-                </div>
-
-                @if (todoList.TodoItems.Count != 0)
-                {
-                    @foreach (var task in todoList.TodoItems)
+                    @if (todoList.TodoItems.Count != 0)
                     {
-                        <div class="task-container" @onclick="() => ViewTask = true">
-                            <p>
-                                <span>@task.Title</span>
-                            </p>
-                            <p>Priority: @task.Priority</p>
-                            @*@if(task. > 0){
+                        <div class="todo-list-title">
+                            <h5>@todoList.Name</h5>
+                            <img src="images/menu.png"/>
+                        </div>
+                        @foreach (var task in todoList.TodoItems)
+                        {
+                            <div class="task-container" @onclick="() => ViewTask = true">
+                                <p>
+                                    <span>@task.Title</span>
+                                </p>
+                                <p>Priority: @task.Priority</p>
+                                @*@if(task. > 0){
                                     <p>Duration: @task.Duration</p>
                                 }
                                 @if(task.TimeStart!="" || task.TimeEnd!=""){
                                 <p>Time: @task.TimeStart - @task.TimeEnd</p>
                                 }*@
                                 <div class="task-lower-part">
-                                    <div class = "todo-date">
+                                    <div class="todo-date">
                                         @*@if(task.StartDate == "" && task.EndDate != ""){
                                             <p>@task.EndDate</p>
                                         } else if (task.StartDate != "" && task.EndDate != "") {
@@ -48,28 +58,29 @@
                                 </div>
                             </div>
                         }
-                }
-                @if (IsAddingTask && CurrentListAddingTask == todoList)
-                {
-                    <input type="text" @bind="TextValue" placeholder="Enter task name..." />
-                    <button @onclick="() => CreateTask(todoList)">Create Task</button>
-                }
-                else
-                {
-                    <button @onclick="() => ShowInputField(todoList)">Add Task</button>
-                }
-            </div>
+                    }
+                    @if (IsAddingTask && CurrentListAddingTask == todoList)
+                    {
+                        <input type="text" @bind="TextValue" placeholder="Enter task name..."/>
+                        <button @onclick="() => CreateTask(todoList)">Create Task</button>
+                    }
+                    else
+                    {
+                        <button @onclick="() => ShowInputField(todoList)">Add Task</button>
+                    }
+                </div>
+            }
         }
-    }
-    <div class="todo-list-container">
-        <button>Create new List</button>
+        <div class="todo-list-container">
+            <button>Create new List</button>
+        </div>
     </div>
-</div>
+}
 
 @code {
     [Parameter]
     public int ProjectId { get; set; }
-    public required ProjectDto CurrentProject { get; set; }
+    public required ProjectDto? CurrentProject { get; set; }
 
     private bool IsAddingTask { get; set; } = false;
     private TodoListDto CurrentListAddingTask { get; set; }
@@ -77,44 +88,11 @@
 
     private bool ViewTask {get; set; } = false;
 
-    //hardcoded TODO List
-    private List<TodoItemDto> hobbyTasks = new List<TodoItemDto>{
-        new () { Title = "Play football with friends"/*,  = 90,  ="5:15 AM", TimeEnd="6:45 AM", StartDate="30-09-24",*/, DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
-        new TodoItemDto { Title = "\"Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false},
-        new TodoItemDto { Title = "\"Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
-    };
-
     //Shouldn't actually create a new project (fetch the given project)
-    protected override void OnInitialized() {
-        CurrentProject = new ProjectDto()
-        {
-            Id = ProjectId,
-            Name = "Default-Project",
-            TodoLists = new List<TodoListDto>
-            {
-                new()
-                {
-                    Name = "Hobby",
-                    TodoItems = hobbyTasks
-                },
-                new ()
-                {
-                    Name = "School",
-                    TodoItems = new List<TodoItemDto>
-                    {
-                        new TodoItemDto { Title = "Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
-                    }
-                },
-                new ()
-                {
-                    Name = "Reading",
-                    TodoItems = new List<TodoItemDto>
-                    {
-                        new() { Title = "Watch one piece", DueDate = DateTime.Today, Description= "This is a very good description", Priority = "VeryLow", IsDone = false}, 
-                    }
-                }
-            }
-        };
+    protected override async Task OnInitializedAsync()
+    {
+        Console.WriteLine($"ProjectId received: {ProjectId}");
+        CurrentProject = await ProjectService.GetProjectByIdAsync(ProjectId);
     }
 
     private void ModifiyTask(TodoItemDto task) {
